table: fix width and text alignment

--- a/assets/css/extra.css
+++ b/assets/css/extra.css
@@ -135,6 +135,11 @@
   padding-top: 10px;
 }
 
+/* fix table header text alignment */
+.dataframe thead th {
+  text-align: left !important;
+}
+
 @media only screen and (max-width: 736px) {
   .single-chart {
     max-width: 25%;
